Fix logo spacing in home page

--- a/css/shunit.css
+++ b/css/shunit.css
@@ -5,7 +5,7 @@
       background-image: url(../img/shellUnit.svg), none;
       background-repeat: no-repeat no-repeat;
       background-size: 100%;
-      margin: 30px auto 10px;
+      margin: 120px auto 100px;
 }
 .text-center {
       text-align: center;
